kubernetes/main/apps/default/jdownloader/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdownloader
  labels: &labels
    app.kubernetes.io/name: jdownloader
spec:
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      containers:
        - name: jdownloader
          image: jlesage/jdownloader-2:v24.12.1
          ports:
            - containerPort: 5800
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/storage-1
              name: storage-1
            - mountPath: /data/storage-2
              name: storage-2
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jdownloader-config
        - name: storage-1
          nfs:
            path: /nfs/storage-1/plex
            server: 192.168.178.52
        - name: storage-2
          nfs:
            path: /nfs/storage-2/plex
            server: 192.168.178.52
  selector:
    matchLabels:
      <<: *labels
