kubernetes/main/apps/default/jdownloader/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdownloader
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5800
      targetPort: http
  selector:
    app.kubernetes.io/name: jdownloader
